--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,8 @@ body {
 }
 ul {
     list-style-type: none;
+     margin: 0;
+    padding: 0;
 }
 .logo .logo-blue {
     color: #4D5AE5;
@@ -33,19 +35,17 @@ ul {
     font-style: normal;
 }
 .Effective {
-background-color: #2E2F42;
-width: 1440px;
-height: 600px;
-color: #FFFFFF;
-font-weight: 700;
-font-size: 56px;
-text-align: center;
+    background-color: #2E2F42;
+    padding: 120px 0;
+    color: #FFFFFF;
+    font-weight: 700;
+    font-size: 56px;
+    text-align: center;
 }
 .Effective .Order {
     display: block;
     margin-top: 40px;
-    width: 200px;
-    height: 60px;
+    padding: 16px 32px;
     background-color: #4D5AE5;
     border: none;
     border-radius: 30px;
@@ -69,9 +69,8 @@ background-color: #F4F4FD;
 }
 
 .footer {
-    text-decoration: none;
-    text-transform: uppercase;
-    background-color: #2E2F42;
+background-color: #2E2F42;
+padding: 100px 0;
 }
 .footer p {
 font-weight: 400;
